message Registrant {
    required string name = 1;
    required string description = 2;
    required string contact = 3;
    required string website = 4;
    required string legalName = 5;
    required Address legalAddress = 6;
}

message Address {
    required street_1 = 1;
    optional street_2 = 2;
    required city = 3;
    optional state = 4;
    required zip = 5;
    required country = 6;
}
